tests/baselines/reference/iterableArrayPattern10.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern10.ts(17,5): error TS2736: Type 'FooIterator' is missing the following properties from type '[any, any]': 0, 1, length, pop, and 26 more.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern10.ts (1 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    function fun([a, b]) { }
    fun(new FooIterator);
        ~~~~~~~~~~~~~~~
!!! error TS2736: Type 'FooIterator' is missing the following properties from type '[any, any]': 0, 1, length, pop, and 26 more.